@@ -1,8 +1,10 @@
 1.0.8
 --------------------------------
 
-- removed all trailing whitespace from source files
+- fix rsyncing of symlinks, thanks to Charles Solar 
+  (should also resolve http://bitbucket.org/hpk42/py-trunk/issue/70/)
 - update usage of apipkg to 1.0b6
+- removed all trailing whitespace from source files
 
 1.0.7
 --------------------------------
